app-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appname-deployment
spec:
  selector:
    matchLabels:
      app: appname
  template:
    metadata:
      labels:
        app: appname
    spec:
      containers:
      - name: appname
        image: 328440967566.dkr.ecr.us-east-1.amazonaws.com/fsapp
        imagePullPolicy: Always
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
