app-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: LoadBalancer
  selector:
    app: appname
  ports:
  - port: 80
    targetPort: 80
